--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,16 +2,22 @@ project:
   type: website
 
 website:
-  title: "blog-template"
+  title: "Communicating with Data by Melisa"   # (1) sensible title
   navbar:
-    right:
+    collapse-below: sm
+    left:
+      - href: index.qmd
+        text: Home
       - about.qmd
-      - icon: github
-        href: https://github.com/etc5523-2022
+      - text: Blog
+        file: posts/index.qmd
+    right:
+      - icon: github                           # (2) link ke GitHub
+        href: https://github.com/Melisa-ops
+
 format:
   html:
-    theme: cosmo
-    css: styles.css
-
-
-
+    theme:
+      light: cosmo
+      dark: darkly
+    css: "styles.css"
