--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Communicating with Data by Melisa"   # (1) sensible title
+  title: "Communicating with Data by Melisa"
   navbar:
     collapse-below: sm
     left:
@@ -12,12 +12,12 @@ website:
       - text: Blog
         file: posts/index.qmd
     right:
-      - icon: github                           # (2) link ke GitHub
+      - icon: github
         href: https://github.com/Melisa-ops
 
 format:
   html:
     theme:
-      light: cosmo
-      dark: darkly
+      light: minty #sketchy
+      dark: slate #darkly
     css: "styles.css"
