--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,9 +9,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
-      - text: Blog
-        file: posts/index.qmd
+      - href: about.qmd
+        text: About
+      - href: posts/index.qmd
+        text: Blog
     right:
       - icon: github
         href: https://github.com/Melisa-ops
@@ -19,6 +20,6 @@ website:
 format:
   html:
     theme:
-      light: minty #sketchy
-      dark: slate #darkly
+      light: minty
+      dark: slate
     css: "styles.css"
