--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,8 @@ website:
         text: Home
       - href: about.qmd
         text: About
-      - href: posts/index.qmd
-        text: Blog
+      #- href: posts/index.qmd
+       # text: Blog
     right:
       - icon: github
         href: https://github.com/Melisa-ops
